@@ -514,6 +514,26 @@ TPad* TGo4ViewPanel::FindPadWithItem(const char* itemname)
    return 0;
 }
 
+const char* TGo4ViewPanel::GetDrawItemName(int itemcnt)
+{
+   int cnt = 0;
+
+   TGo4Iter iter(GetPanelSlot(), kTRUE);
+   while (iter.next()) {
+      TGo4Slot* subslot = iter.getslot();
+      int drawkind = GetDrawKind(subslot);
+      if ((drawkind == kind_Link) || (drawkind == kind_Condition)) {
+         const char* linkname = GetLinkedName(subslot);
+         if (linkname != 0) {
+            if (cnt++ == itemcnt) return linkname;
+         }
+      }
+   }
+
+   return 0;
+}
+
+
 void TGo4ViewPanel::UndrawItemOnPanel(const char* itemname)
 {
    TGo4LockGuard lock(0, true);
