@@ -65,6 +65,10 @@ Changes in Go4 v4.5.9
    is used in TGo4DabcSniffer to record and provide debug output of any go4 analysis
 18.Provide in preference menu possibility to set "draw once" flag. Means every histogram
    can only be drawn once when double-clicked in the browser.
+19.Provide in gui script possibility to request item name, drawn in the panel.
+   Method name is go4->GetDrawnItemName(panel, cnt = 0). Can be useful in some 
+   gui scripts. Done for qt3/qt4. 
+
 
 Changes in Go4 v4.5.5
 1. Adjust different macros to use together with ROOT 5.99 
